# RAG-Agent

./: README.md  config.py  pyproject.toml  requirements.txt
backend/: main.py
frontend/: app.py
rag_core/: simple_rag.py
